Fix : remove scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,15 @@ a {
   text-decoration: none;
 }
 
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 .app-container {
   display: flex;
   height: 100vh;
